3sum with windowing